fix: Fixed input sizes on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
     padding: 10px 12px;
     width: 60vw;
     max-width: 700px;
-    min-width: 250px;
+    min-width: 300px;
     background-color: var(--bg-color);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.052);
     margin: auto
@@ -130,7 +130,7 @@ button {
     padding: 10px 12px;
     width: 90vw;
     max-width: 700px;
-    min-width: 250px;
+    min-width: 300px;
     bottom: 25px;
     background-color: var(--bg-color);
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.052);
